# E-Mud

./: CMakeLists.txt  README.md
EMudEntityCreationMenus/: EMudEntityCreationMenus.sln  EMudEntityCreationMenus.userprefs
EMudEntityCreationMenus/EMudEntityCreationMenus/: CreatureCreation.cs  EMudEntityCreationMenus.csproj  ItemCreation.cs  Program.cs
EMudEntityCreationMenus/EMudEntityCreationMenus/Properties/: AssemblyInfo.cs
include/: server.h
src/: main.cpp  server.cpp
